main.css
html, body {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  font-weight: 300;
  line-height: 1.5;
}

body {
  background-size: cover;
  margin: 0;
}

.page-title {
  text-align: center;
  font-family: "Helvetica";
  font-size: 40px;
  background-color: rgba(0, 0, 0, 0.2);
  margin: 2px;
  padding: 30px;
}

.page-description {
  font-family: "Helvetica";
  font-size: 20px;s
  border: 1px solid #000;
  margin: 2px;
  text-align: center;
  padding: 30px;
}

.parallax {
  background-image: url("/src/2.jpg");
  min-height: 2500px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: repeat-y;
  background-size: cover;
}

